--- a/my_anim.html
+++ b/my_anim.html
@@ -3,6 +3,9 @@
 <head>
 <title>Eleni's Animation</title>
 
+<body style="background-color:lightgrey;">
+<p style="font-size:50px; color:brown;"><b>Trapped in Animation</b></p>
+
 <script>
 
     var canvas;    // DOM object corresponding to the canvas
@@ -188,8 +191,11 @@
 
 </head>
 <body onload="init()">
+   <p style=color:brown;>See more work here:</p>
   <a href="index.html">Eleni's Practice Transformation Matrices</a><br>
   <a href="fig8.html">Eleni's Figure 8</a><br>
+  <p></p>
+  <p></p>
   <canvas id="theCanvas" width="500" height="500"></canvas>
 </body>
 </html>    
