--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      * Reflections on this assignment: Initially struggled to get the animation going. 
      * Really wanted to have the ability to switch from one animation to another.
      * Sources: //https://www.w3schools.com/html/html_styles.asp
+     * Helped Aneliz understand Figure 8.
      */
     
     var canvas;    // DOM object corresponding to the canvas
