--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     /*
      * Name:  Eleni Partakki
      * Partner name (if pair programming): N/A
-     * Reflections on this assignment: Initially struggled to get the animation going. 
-     * Really wanted to have the ability to switch from one animation to another.
-     * Sources: //https://www.w3schools.com/html/html_styles.asp
-     * Helped Aneliz understand Figure 8.
+     * Reflections on this assignment: Initially struggled to get the animation going and I wish I had more time to fix my_anima. 
+     * Really wanted to have the ability to switch from one animation to another more smoothly.
+     * This assignment was definitely a challenge and I think moving forward I might attempt to find a partner,
+     * simply because it is easier to bounce ideas off of other people and I do not think that T/A hours are enough.
+     * Sources for styling: //https://www.w3schools.com/html/html_styles.asp
      */
     
     var canvas;    // DOM object corresponding to the canvas
@@ -23,21 +24,15 @@
     // set of transformations (3x3)
     var currMatrix;
 
+    //New Matrix
     function newMatrix(rows, cols) {
       var newM = new Array(rows);
       for (let i = 0; i < rows; i++) {
         newM[i] = new Array(cols)
       }
     }
-
-    function identityMatrix() {
-      var I = new Array(3);
-      I[0] = [1, 0, 0];
-      I[1] = [0, 1, 0];
-      I[2] = [0, 0, 1];
-      return I;
-    }
-
+  
+    //Matrix Multiplication
     function matrixMultiply(M1, M2) {
       var rows = M1.length;
       var cols = M2[0].length;
@@ -59,6 +54,16 @@
       return newM;
     }
 
+    //Identity from 2D Transformation Summary
+    function identityMatrix() {
+        var I = new Array(3);
+        I[0] = [1, 0, 0];
+        I[1] = [0, 1, 0];
+       I[2] = [0, 0, 1];
+       return I;
+    }
+
+    //Scaling from 2D Transformation Summary
     function scaleMatrix(sx, sy) {
       var S = new Array(3);
       S[0] = [sx, 0, 0];
@@ -67,6 +72,7 @@
       return S;
     }
 
+    //Rotation from 2D Transformation Summary
     function rotateMatrix(theta) {
       var R = new Array(3);
       R[0] = [Math.cos(theta), -1 * Math.sin(theta), 0];
@@ -75,6 +81,7 @@
       return R;
     }
 
+    //Translation from 2D Transformation Summary
     function translateMatrix(tx, ty) {
       var T = new Array(3);
       T[0] = [1, 0, tx];
@@ -83,6 +90,7 @@
       return T;
     }
 
+    //Reflection from 2D Transformation Summary
     function reflectionMatrix() {
       var F = new Array(3);
       F[0] = [-1, 0, 0];
@@ -91,6 +99,7 @@
       return F;
     }
 
+    //Shear from 2D Transformation Summary
     function shearMatrix(lambda) {
       var H = new Array(3);
       H[0] = [1, 0, 0];
