--- a/fig8.html
+++ b/fig8.html
@@ -20,6 +20,7 @@
     var b = 0;
 
     //New Matrix
+    //From Lab M
     function newMatrix(rows, cols) {
       var newM = new Array(rows);
       for (let i = 0; i < rows; i++) {
